--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -21,6 +21,7 @@
   --submit-color: #f582ae;
   --input-color: #ccc;
   --file-color: #8bd3dd;
+  --caution-color: #fbdd90;
   /* fonts */
   --font-strong: "Potta One", cursive;
   --font-header: "Klee One", cursive;
